<resources>
    <string name="app_name">Sare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_daily">Daily</string>
    <string name="text_daily_expenses">Daily Expenses</string>
    <string name="sample_amount">Kes 2,000</string>
    <string name="text_weekly">Weekly</string>
    <string name="text_monthly">Monthly</string>
    <string name="navigation_expenses">Expenses</string>
    <string name="bottom_app_bar_logo_content_desc">View or add expenses</string>
    <string name="text_settings">Settings</string>
    <string name="text_add_expense">Add Expense</string>
    <string name="text_amount">amount</string>
    <string name="sample_text_internet">Internet</string>
    <string name="text_utility_name">Savings</string>
    <string name="text_expense_date">Expense Date</string>
</resources>
