<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expenses.AddExpenseFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_default1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/sare_teal_300"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_add_expense" />

    <!--amount-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_expense_amount"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_amount"
        app:layout_constraintEnd_toStartOf="@id/til_duration_filter"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtv_default1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mtv_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--expense duration filter-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_daily"
        android:id="@+id/til_duration_filter"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_expense_amount"
        app:layout_constraintTop_toBottomOf="@id/mtv_default1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tiet_duration_filter" />
    </com.google.android.material.textfield.TextInputLayout>

        <!--expense description-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sample_text_internet"
        android:id="@+id/til_expense_description"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/til_utility_name"
        app:layout_constraintTop_toBottomOf="@id/til_expense_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tiet_expense_description"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--expense description-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_utility_name"
        android:id="@+id/til_utility_name"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_expense_description"
        app:layout_constraintTop_toBottomOf="@id/til_duration_filter">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tiet_utility_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/text_expense_date"
        android:id="@+id/btn_expense_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_utility_name"
        />
</androidx.constraintlayout.widget.ConstraintLayout>