<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="3"
    android:gravity="top"
    android:layout_marginTop="70dp"
    tools:context=".ui.summary.SummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/card_summary_width_small"
        android:layout_height="@dimen/card_summary_height_small"
        android:layout_marginEnd="10dp"
        android:layout_weight=".7"
        android:orientation="vertical"
        android:background="@drawable/chart_circle"
        android:id="@+id/chart_daily"
        android:layout_marginStart="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mtv_summary_daily_label"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_daily"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="?attr/textAppearanceHeadline5"
            tools:text="@string/text_daily"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mtv_summary_daily"
            android:text="@string/sample_amount"
            app:layout_constraintTop_toBottomOf="@id/mtv_summary_daily_label"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.Sare.SubTitle1"
            tools:text="Kes 3,000"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/card_summary_width_medium"
        android:layout_height="@dimen/card_summary_height_medium"
        android:layout_marginEnd="10dp"
        android:id="@+id/chart_weekly"
        android:background="@drawable/chart_circle"
        android:layout_weight="1.6">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mtv_summary_weekly_label"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/text_weekly"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/sare_light_blue_400"
            android:paddingTop="30dp"
            tools:text="@string/text_weekly"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_weekly_daily"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sample_amount"
            android:textAppearance="@style/TextAppearance.Sare.SubTitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtv_summary_weekly_label"
            tools:text="@string/sample_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/card_summary_width_small"
        android:layout_height="@dimen/card_summary_height_small"
        android:layout_weight=".7"
        android:background="@drawable/chart_circle"
        android:id="@+id/chart_monthly"
        android:layout_marginEnd="@dimen/dimen_10dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mtv_summary_monthly_label"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/text_monthly"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_16dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/text_monthly"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mtv_summary_monthly"
            android:textAppearance="@style/TextAppearance.Sare.SubTitle1"
            android:text="@string/sample_amount"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/mtv_summary_monthly_label"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Kes 3,000"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>